# Cellkernelqwen

./: .gitignore  LICENSE  Makefile  README.md  cellkernel.txt
.github/workflows/: build.yml
CellKernel/boot/efi/: efi_main.c  protocols.h
Cellkernelqwen/: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
Cellkernelqwen/.github/workflows/: build.yml
Cellkernelqwen/iso_root/boot/: init
Cellkernelqwen/src/audio/: subsystem.py
Cellkernelqwen/src/filesystem/: vfs.py
Cellkernelqwen/src/kernel/: cellkernel.py
Cellkernelqwen/src/network/: stack.py
Cellkernelqwen/src/ui/: interface.py
Cellkernelqwen/tests/: test_all.py
boot/: bootconfig.ini
boot/bios/: a20.asm  boot.asm  disk_io.asm
boot/efi/: efi_main.c  protocols.h
boot/multiboot/: header.asm
boot/secure/: tpm_measure.c  verify_signature.c
filesystems/vfs/: vfs_core.c
kernel/: linker.ld
kernel/core/: interrupts.c  main.c  panic.c  scheduling.c  syscalls.c
kernel/include/: kernel.h
kernel/ipc/: message.c
kernel/memory/: frame_alloc.c  paging.c  slab.c
